2008-02-10  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gtk/gtkfilechooser.c (gtk_file_chooser_get_current_folder_uri):
	Check the return value of _gtk_file_chooser_get_file_system () for
	NULL before passing it to gtk_file_system_path_to_uri ().
	(#515667, Francesco Montorsi)

2008-02-12  Federico Mena Quintero  <federico@novell.com>

	* gtk/gtkfilechooserdefault.c (switch_to_shortcut): Don't focus
	the file list (this was the last place where we would focus the
	file list explicitly).  If you are in the location entry, for
	example, you don't want Alt-Home to take you to the file list; you
	just want the current folder to change.  Thanks to Olle Bergkvist
	<olle.bergkvist@yahoo.se> for pointing this out in
	http://bugzilla.gnome.org/show_bug.cgi?id=419737#c51.
	(focus_browse_tree_view_if_possible): Removed.

2008-02-12  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Skip exensions when selecting filenames in the save-as dialog.
	(#362516, Carlos Garnacho)

	* gtk/gtkfilechooserentry.h:
	* gtk/gtkfilechooserentry.c (_gtk_file_chooser_entry_select_filename):
	New function to skip the extension part when selecting a filename.
	(_gtk_file_chooser_entry_set_base_folder): Use it here.

	* gtkfilechooserdefault.c (gtk_file_chooser_entry_grab_focus):
	...and here.

2008-02-12  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkiconview.c: Fix state change reporting for
	accessibility.  (#499835, Rich Burridge, patch by LiYan Zhang)

2008-02-12  Emmanuele Bassi  <ebassi@gnome.org>

	Merged from trunk:

	* gtk/gtkrecentchooser.c:
	(gtk_recent_chooser_class_init): Set the default value of the
	show-not-found property to TRUE, as every implementation sets
	it to TRUE already.

	* gtk/gtkrecentchooserdefault.c:
	(_gtk_recent_chooser_default_init): Sync show_tips to the
	default value of the :show-tips property.

2008-02-12  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:
